# AEDA-proj

./: CMakeLists.txt  Company.cpp  Company.h  Date.cpp  Date.h  Operator.cpp  Operator.h  Passenger.cpp  Passenger.h  Plane.cpp  Plane.h  README.md  Reservation.cpp  Reservation.h  Voo.cpp  Voo.h  alureservations.txt  casualclients.txt  cflights.txt  comreservations.txt  main.cpp  planes.txt  premiumclients.txt
